更新by  mac  guangwen

--- a/pandas学习.ipynb
+++ b/pandas学习.ipynb
@@ -4235,7 +4235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4314,12 +4314,14 @@
        "4   Brussels_londOn       10085.0      [67, 32]          \"Swiss Air\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "df = pd.DataFrame({'From_To': ['LoNDon_paris', 'MAdrid_miLAN', 'londON_StockhOlm', \n",
     "                               'Budapest_PaRis', 'Brussels_londOn'],\n",
     "              'FlightNumber': [10045, np.nan, 10065, np.nan, 10085],\n",
@@ -4331,7 +4333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -4422,7 +4424,7 @@
        "4   Brussels_londOn         10085      [67, 32]          \"Swiss Air\""
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4469,8 +4471,8 @@
        "      <th>FlightNumber</th>\n",
        "      <th>RecentDelays</th>\n",
        "      <th>Airline</th>\n",
-       "      <th>From</th>\n",
-       "      <th>To</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4486,7 +4488,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>MAdrid_miLAN</td>\n",
-       "      <td>10055</td>\n",
+       "      <td>10045</td>\n",
        "      <td>[]</td>\n",
        "      <td>&lt;Air France&gt; (12)</td>\n",
        "      <td>MAdrid</td>\n",
@@ -4504,7 +4506,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Budapest_PaRis</td>\n",
-       "      <td>10075</td>\n",
+       "      <td>10065</td>\n",
        "      <td>[13]</td>\n",
        "      <td>12. Air France</td>\n",
        "      <td>Budapest</td>\n",
@@ -4526,12 +4528,12 @@
       "text/plain": [
        "            From_To  FlightNumber  RecentDelays              Airline  \\\n",
        "0      LoNDon_paris         10045      [23, 47]               KLM(!)   \n",
-       "1      MAdrid_miLAN         10055            []    <Air France> (12)   \n",
+       "1      MAdrid_miLAN         10045            []    <Air France> (12)   \n",
        "2  londON_StockhOlm         10065  [24, 43, 87]  (British Airways. )   \n",
-       "3    Budapest_PaRis         10075          [13]       12. Air France   \n",
+       "3    Budapest_PaRis         10065          [13]       12. Air France   \n",
        "4   Brussels_londOn         10085      [67, 32]          \"Swiss Air\"   \n",
        "\n",
-       "       From         To  \n",
+       "          0          1  \n",
        "0    LoNDon      paris  \n",
        "1    MAdrid      miLAN  \n",
        "2    londON  StockhOlm  \n",
@@ -4548,8 +4550,432 @@
     "# 38. 将From_To列从_分开，分成From, To两列，并删除原始列\n",
     "df2['From'] = df2['From_To'].apply(lambda x: x.split('_')[0])\n",
     "df2['To'] = df2['From_To'].apply(lambda x: x.split('_')[1])\n",
+    "df2\n",
+    "a= df1.From_To.str.split(\"_\",expand=True)\n",
+    "df1.join(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From_To</th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon_paris</td>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid_miLAN</td>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON_StockhOlm</td>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>A</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest_PaRis</td>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels_londOn</td>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            From_To  FlightNumber  RecentDelays Airline      From         To\n",
+       "0      LoNDon_paris         10045      [23, 47]     NaN    London      Paris\n",
+       "1      MAdrid_miLAN         10055            []       A    Madrid      Milan\n",
+       "2  londON_StockhOlm         10065  [24, 43, 87]       A    London  Stockholm\n",
+       "3    Budapest_PaRis         10075          [13]       A  Budapest      Paris\n",
+       "4   Brussels_londOn         10085      [67, 32]       A  Brussels     London"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 39. 将From, To大小写统一首字母大写其余小写\n",
+    "df2['To'] = df2['To'].str.capitalize()\n",
+    "df2\n",
+    "df2['From'] = df2['From'].str.capitalize()\n",
+    "\n",
     "df2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From_To</th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon_paris</td>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid_miLAN</td>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON_StockhOlm</td>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>A</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest_PaRis</td>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels_londOn</td>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            From_To  FlightNumber  RecentDelays Airline      From         To\n",
+       "0      LoNDon_paris         10045      [23, 47]     NaN    London      Paris\n",
+       "1      MAdrid_miLAN         10055            []       A    Madrid      Milan\n",
+       "2  londON_StockhOlm         10065  [24, 43, 87]       A    London  Stockholm\n",
+       "3    Budapest_PaRis         10075          [13]       A  Budapest      Paris\n",
+       "4   Brussels_londOn         10085      [67, 32]       A  Brussels     London"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From_To</th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon_paris</td>\n",
+       "      <td>10045.0</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid_miLAN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Air France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON_StockhOlm</td>\n",
+       "      <td>10065.0</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>British Airways</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest_PaRis</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>Air France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels_londOn</td>\n",
+       "      <td>10085.0</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>Swiss Air</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            From_To  FlightNumber  RecentDelays          Airline\n",
+       "0      LoNDon_paris       10045.0      [23, 47]              KLM\n",
+       "1      MAdrid_miLAN           NaN            []       Air France\n",
+       "2  londON_StockhOlm       10065.0  [24, 43, 87]  British Airways\n",
+       "3    Budapest_PaRis           NaN          [13]       Air France\n",
+       "4   Brussels_londOn       10085.0      [67, 32]        Swiss Air"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 40. Airline列，有一些多余的标点符号，需要提取出正确的航司名称。举例：'(British Airways. )' 应该改为 'British Airways'.\n",
+    "df3 = copy.deepcopy(df2)\n",
+    "# df2['Airline'] = df2['Airline'].str.extract('([a_zA_Z\\s]+)',expand=False).str.strip() 横杠的写法\n",
+    "df['Airline'] = df['Airline'].str.extract('([a-zA-Z\\s]+)', expand=False).str.strip()\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4575,9 +5001,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (msd_n_grim)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pycharm-8e5b4f64"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4589,7 +5015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
