--- a/pandas学习.ipynb
+++ b/pandas学习.ipynb
@@ -5592,9 +5592,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PyCharm (msd_n_grim)",
    "language": "python",
-   "name": "python3"
+   "name": "pycharm-8e5b4f64"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5606,7 +5606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
