--- a/pandas实战.ipynb
+++ b/pandas实战.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        " 'wind.data']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "9  [Fresh Tomato Salsa, [Rice, Black Beans, Pinto...     $9.25   "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quantity    Chicken Bowl\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>item_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Chicken Bowl</th>\n",
+       "      <td>761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chicken Burrito</th>\n",
+       "      <td>591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chips and Guacamole</th>\n",
+       "      <td>506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Steak Burrito</th>\n",
+       "      <td>386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Canned Soft Drink</th>\n",
+       "      <td>351</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     quantity\n",
+       "item_name                    \n",
+       "Chicken Bowl              761\n",
+       "Chicken Burrito           591\n",
+       "Chips and Guacamole       506\n",
+       "Steak Burrito             386\n",
+       "Canned Soft Drink         351"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_sell_num = pd.DataFrame(chipo.groupby('item_name')['quantity'].sum())\n",
+    "print(item_sell_num.idxmax())\n",
+    "item_sell_num = item_sell_num.sort_values('quantity',ascending=False)\n",
+    "item_sell_num.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  1.3 在item_name这一列中，一共有多少种商品被下单？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Chips and Fresh Tomato Salsa', 'Izze', 'Nantucket Nectar',\n",
+       "       'Chips and Tomatillo-Green Chili Salsa', 'Chicken Bowl',\n",
+       "       'Side of Chips', 'Steak Burrito', 'Steak Soft Tacos',\n",
+       "       'Chips and Guacamole', 'Chicken Crispy Tacos',\n",
+       "       'Chicken Soft Tacos', 'Chicken Burrito', 'Canned Soda',\n",
+       "       'Barbacoa Burrito', 'Carnitas Burrito', 'Carnitas Bowl',\n",
+       "       'Bottled Water', 'Chips and Tomatillo Green Chili Salsa',\n",
+       "       'Barbacoa Bowl', 'Chips', 'Chicken Salad Bowl', 'Steak Bowl',\n",
+       "       'Barbacoa Soft Tacos', 'Veggie Burrito', 'Veggie Bowl',\n",
+       "       'Steak Crispy Tacos', 'Chips and Tomatillo Red Chili Salsa',\n",
+       "       'Barbacoa Crispy Tacos', 'Veggie Salad Bowl',\n",
+       "       'Chips and Roasted Chili-Corn Salsa',\n",
+       "       'Chips and Roasted Chili Corn Salsa', 'Carnitas Soft Tacos',\n",
+       "       'Chicken Salad', 'Canned Soft Drink', 'Steak Salad Bowl',\n",
+       "       '6 Pack Soft Drink', 'Chips and Tomatillo-Red Chili Salsa', 'Bowl',\n",
+       "       'Burrito', 'Crispy Tacos', 'Carnitas Crispy Tacos', 'Steak Salad',\n",
+       "       'Chips and Mild Fresh Tomato Salsa', 'Veggie Soft Tacos',\n",
+       "       'Carnitas Salad Bowl', 'Barbacoa Salad Bowl', 'Salad',\n",
+       "       'Veggie Crispy Tacos', 'Veggie Salad', 'Carnitas Salad'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 就是有多少种不同的商品\n",
+    "chipo['item_name'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4将item_price转换为浮点数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -328,104 +470,146 @@
        "      <td>[Tomatillo-Red Chili Salsa (Hot), [Black Beans...</td>\n",
        "      <td>$16.98</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4617</th>\n",
-       "      <td>1833</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Steak Burrito</td>\n",
-       "      <td>[Fresh Tomato Salsa, [Rice, Black Beans, Sour ...</td>\n",
-       "      <td>$11.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4618</th>\n",
-       "      <td>1833</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Steak Burrito</td>\n",
-       "      <td>[Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...</td>\n",
-       "      <td>$11.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4619</th>\n",
-       "      <td>1834</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Chicken Salad Bowl</td>\n",
-       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
-       "      <td>$11.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4620</th>\n",
-       "      <td>1834</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Chicken Salad Bowl</td>\n",
-       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Lettu...</td>\n",
-       "      <td>$8.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4621</th>\n",
-       "      <td>1834</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Chicken Salad Bowl</td>\n",
-       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
-       "      <td>$8.75</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4622 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      order_id  quantity                              item_name  \\\n",
-       "0            1         1           Chips and Fresh Tomato Salsa   \n",
-       "1            1         1                                   Izze   \n",
-       "2            1         1                       Nantucket Nectar   \n",
-       "3            1         1  Chips and Tomatillo-Green Chili Salsa   \n",
-       "4            2         2                           Chicken Bowl   \n",
-       "...        ...       ...                                    ...   \n",
-       "4617      1833         1                          Steak Burrito   \n",
-       "4618      1833         1                          Steak Burrito   \n",
-       "4619      1834         1                     Chicken Salad Bowl   \n",
-       "4620      1834         1                     Chicken Salad Bowl   \n",
-       "4621      1834         1                     Chicken Salad Bowl   \n",
+       "   order_id  quantity                              item_name  \\\n",
+       "0         1         1           Chips and Fresh Tomato Salsa   \n",
+       "1         1         1                                   Izze   \n",
+       "2         1         1                       Nantucket Nectar   \n",
+       "3         1         1  Chips and Tomatillo-Green Chili Salsa   \n",
+       "4         2         2                           Chicken Bowl   \n",
        "\n",
-       "                                     choice_description item_price  \n",
-       "0                                                   NaN     $2.39   \n",
-       "1                                          [Clementine]     $3.39   \n",
-       "2                                               [Apple]     $3.39   \n",
-       "3                                                   NaN     $2.39   \n",
-       "4     [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   \n",
-       "...                                                 ...        ...  \n",
-       "4617  [Fresh Tomato Salsa, [Rice, Black Beans, Sour ...    $11.75   \n",
-       "4618  [Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...    $11.75   \n",
-       "4619  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...    $11.25   \n",
-       "4620  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...     $8.75   \n",
-       "4621  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...     $8.75   \n",
-       "\n",
-       "[4622 rows x 5 columns]"
+       "                                  choice_description item_price  \n",
+       "0                                                NaN     $2.39   \n",
+       "1                                       [Clementine]     $3.39   \n",
+       "2                                            [Apple]     $3.39   \n",
+       "3                                                NaN     $2.39   \n",
+       "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chipo[]"
+    "chipo.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##################################################\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chips and Fresh Tomato Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Izze</td>\n",
+       "      <td>[Clementine]</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nantucket Nectar</td>\n",
+       "      <td>[Apple]</td>\n",
+       "      <td>3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chips and Tomatillo-Green Chili Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Chicken Bowl</td>\n",
+       "      <td>[Tomatillo-Red Chili Salsa (Hot), [Black Beans...</td>\n",
+       "      <td>16.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  quantity                              item_name  \\\n",
+       "0         1         1           Chips and Fresh Tomato Salsa   \n",
+       "1         1         1                                   Izze   \n",
+       "2         1         1                       Nantucket Nectar   \n",
+       "3         1         1  Chips and Tomatillo-Green Chili Salsa   \n",
+       "4         2         2                           Chicken Bowl   \n",
+       "\n",
+       "                                  choice_description  item_price  \n",
+       "0                                                NaN        2.39  \n",
+       "1                                       [Clementine]        3.39  \n",
+       "2                                            [Apple]        3.39  \n",
+       "3                                                NaN        2.39  \n",
+       "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...       16.98  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('#'*50)\n",
+    "chipo['item_price'] = chipo['item_price'].apply(lambda x: float(x[1:-1]))  # $ \n",
+    "chipo.head()\n"
+   ]
   },
   {
    "cell_type": "code",
